# snn-learning-dynamics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
minibatch/: conv_mnist.py  multilayer_conv_mnist.py  util.py
minibatch/conversion/: convert.py  eval_mlp.py  train_mlp.py
minibatch/conversion/experiments/: convert_vary_time_batch_size.py
minibatch/dac/: dac_mnist.py  plot_sum_and_max_runs.py  test_dac_mnist.py
minibatch/hebbian/: hebbian.py
minibatch/plotting/: plot_scaling_comparison.py  plot_scaling_learning_comparison.py
minibatch/scaling/: fix_network_vary_batch.py  scaling.py
minibatch/sgd/: sgd.py
